correction on trend translation + country flag

--- a/src/Translation/French/translation.json
+++ b/src/Translation/French/translation.json
@@ -1,5 +1,5 @@
 {
-    "title": "Trends du jour",
+    "title": "Tendances du jour",
     "search": "recherches",
     "more" : "Plus de gifs",
     "explore": "Visiter",
