--- a/src/Translation/English/translation.json
+++ b/src/Translation/English/translation.json
@@ -6,5 +6,6 @@
     "close": "Close",
     "related": "Gifs related to",
     "http-error": "Error while loading data",
-    "http-loading": "Loading data..."
+    "http-loading": "Loading data...",
+    "footer-text": "Made by"
 }
