--- a/src/Translation/French/translation.json
+++ b/src/Translation/French/translation.json
@@ -6,5 +6,6 @@
     "close": "Fermer",
     "related": "Gifs en lien avec",
     "http-error": "Erreur lors du chargement des données",
-    "http-loading": "Chargement des données..."
+    "http-loading": "Chargement des données...",
+    "footer-text": "Fait par"
 }
